--- a/new.html
+++ b/new.html
@@ -114,7 +114,7 @@
                 <a href="https://www.instagram.com/alexx.vibe" target="_blank" class="footer__social-link">
                     <i class='bx bxl-instagram-alt'></i>
                 </a>
-                <a href="https://github.com/" target="_blank" class="footer__social-link">
+                <a href="https://github.com/alexx-d" target="_blank" class="footer__social-link">
                     <i class='bx bxl-github'></i>
                 </a>
             </div>
