--- a/paper5.html
+++ b/paper5.html
@@ -185,7 +185,7 @@
                 <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
                     <i class='bx bxl-instagram-alt'></i>
                 </a>
-                <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                <a href="https://twitter.com/alexx-d" target="_blank" class="footer__social-link">
                     <i class='bx bxl-twitter'></i>
                 </a>
             </div>
